# InformaticaBasica_2024_2025

./: README.md
pr10/clase/desafio_final/: calculadora  desafio_final.cpp
pr10/clase/frecuencia_elementos/: frecuencia_elementos.cpp  rotacion
pr10/clase/inversa/: inversa  inversa.cpp
pr10/ejercicios/Exercism-Hello/: CMakeCache.txt  Makefile  cmake_install.cmake
pr10/ejercicios/Exercism-Leap/: leap.cpp
pr10/ejercicios/ejercicio2/: CMakeLists.txt  vector.cpp  vector.h  vector_main.cpp
pr10/ejercicios/ejercicio3/: CMakeLists.txt  reducesum.cpp  reducesum.h  reducesum_main.cpp
pr10/ejercicios/ejercicio4/: CMakeLists.txt  calcula.cpp  calcula.h  calcula_main.cpp
pr10/ejercicios/ejericio1/: leap_year.cc
pr10/ejercicios/hello_world/: CMakeLists.txt  hello_wold.cpp  hello_world.h
pr11/clase/: cesar.cc  contador_dulcinea.cc  contador_rocinante.cc  el_quijote_texto.txt
pr12/clase/: empresa.cc  enunciado.txt  modificacion_main.cc  usuario.cc  vehiculos.cc
pr12/ejercicios/complejo/: CMakeLists.txt
pr12/ejercicios/complejo/src/: complejo.cc  complejo.h  complejo_main.cc
pr3/: Sancho.txt
pr5/P31761_Multiply/: multiply  multiply.cc
pr5/P57548/: sum_of_two_integer_numbers.cc  suma
pr5/P70955_How_Many_Seconds/: seconds  seconds.cc
pr5/ejercicios_casa/: P48107_IntegrerDivition.cc  arithmetic_operators  arithmetic_operators.cc  boolean_operators  boolean_operators.cc  desinflado  desinflado.cc
pr6/: AddOneSecond.cc  HarmonicNumbers.cc  MaxThreeInteger.cc  NumberInterval.cc  P48107_IntegrerDivition.cc  UppercaseLowercase.cc
pr6/clase/: Makefile  P59875_TopToBottom.cc  P89078_FirstPosition  P89078_FirstPosition.cc  TopToBottom
pr7/clase/: .Makefile.swp
(+104 files in other folders)
